@@ -12,10 +12,8 @@ use warnings;
 
 use Test::More tests => 20;
 
-use constant {
-	IMG_WIDTH => 256,
-	IMG_HEIGHT => 256,
-};
+use constant IMG_WIDTH => 256;
+use constant IMG_HEIGHT => 256;
 
 use Cairo;
 
